<resources>
    <string name="app_name">App Views</string>
    <string name="button_color">Go Red</string>
    <string name="button_listview">List View</string>
    <string name="button_list_adapter">Custom Adapter - List View</string>
    <string name="button_change_simpleadapter">Go To SimpleAdapter - List View</string>
    <string name="button_change_arrayadapter">Go To ArrayAdapter - List View</string>
    <string name="button_gridview">Grid View</string>
    <string name="button_goproducts">Go to Product List</string>
    <string name="button_gotype">Go Type Products</string>
    <string name="button_newproduct">Create</string>
    <string name="button_fragment">Go to Fragment</string>
    <string name="button_cardview">Go to CardView</string>
    <string name="button_showdialog">Show me the dialog</string>
    <string name="button_pref">Go to Preferences</string>
    <string name="button_newlist">Go to new List of Products</string>
    <string name="button_navigation">Go to Navigation</string>
    <string name="button_recycle">Go to Recycle Example</string>
    <string name="button_httprequest">Go to HTTP Request</string>
    <string name="button_mymaps">Go to My Maps</string>

    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="order_header">Order by</string>
    <string name="day_header">Day for shopping</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="order_title">Order by options</string>
    <string name="day_title">Day for reminder</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_list_product">ListProductActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_navigation_products">NavigationProductsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_mi_maps">MiMapsActivity</string>

</resources>