<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/order_header">

        <ListPreference
            android:defaultValue="name"
            android:entries="@array/order_entries"
            android:entryValues="@array/order_values"
            android:key="order_preference"
            android:title="@string/order_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/day_header">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/day_entries"
            android:entryValues="@array/day_values"
            android:key="day_preference"
            android:title="@string/day_title" />
    </PreferenceCategory>

</PreferenceScreen>